# OpenCV_tracker

./: .gitignore  README.md
cv_tracker_example/: CMakeLists.txt  main.cpp
kalman_tracker/: CMakeLists.txt  main.cpp  target.cpp  tracking.cpp  tracking.h
